--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
-  <body>
-    <header></header>
+  <body class="open-sans-normal">
+    <header class="header">
+      <nav>
+        <h3 class="nav-title">Ma<span class="nav-style">r</span>y</h3>
+        <ul>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <a class="hire-me" href="#"
+            ><button class="btn-primary open-sans-normal">Hire Me</button></a
+          >
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h3 class="banner-greetings">Hi, I am</h3>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p class="banner-description">
+            Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as
+            to society behaved moments.
+          </p>
+          <div class="btn-container">
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+          </div>
+        </div>
+        <img src="./images/hardy.png" alt="" />
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
