about section done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,37 @@
         <img src="./images/hardy.png" alt="" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <div class="about-container">
+          <h3 class="section-title">About Me</h3>
+          <p class="section-description">
+            I, m a designer & developer with a passion for web design. I enjoy developing simple,
+            clean and slick websites that provide real value to the end user. Thousands of clients
+            have procured exceptional resulfs while working with me. Delivering work within time and
+            budget which meets clients requirements in our mata.
+          </p>
+          <div class="about-info">
+            <div class="info">
+              <p>Name:</p>
+              <p>Mary Hardy</p>
+            </div>
+            <div class="info">
+              <p>Email:</p>
+              <p>info@gmail.com</p>
+            </div>
+            <div class="info">
+              <p>Date of Birth:</p>
+              <p>16 Dec, 2024</p>
+            </div>
+            <div class="info">
+              <p>From:</p>
+              <p>LA, USA</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
