skills section done

--- a/index.html
+++ b/index.html
@@ -70,6 +70,50 @@
           </div>
         </div>
       </section>
+
+      <!-- =========== what i do section starts ============= -->
+      <section class="skills">
+        <h3 class="section-title">What I do</h3>
+        <p class="section-description">
+          I have more than 10 years experience building software for clients all over the world.
+          Below is a quick overview of my main technical skill sets and technologies i use. Want to
+          find out more about my experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="cards">
+          <div class="card">
+            <img src="images/icons/js.png" alt="" class="logo" />
+            <h3 class="text-primary">Vanilla JavaScript</h3>
+            <p class="section-description">
+              List skill/technologies here. You can change the icon above to any of the 1500+
+              FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/icons/react.png" alt="" class="logo" />
+            <h3 class="text-primary">React</h3>
+            <p class="section-description">
+              List skill/technologies here. You can change the icon above to any of the 1500+
+              FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/icons/nodejs.png" alt="" class="logo" />
+            <h3 class="text-primary">Node.js</h3>
+            <p class="section-description">
+              List skill/technologies here. You can change the icon above to any of the 1500+
+              FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/icons/mongo.png" alt="" class="logo" />
+            <h3 class="text-primary">MongoDB</h3>
+            <p class="section-description">
+              List skill/technologies here. You can change the icon above to any of the 1500+
+              FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
