--- a/index.html
+++ b/index.html
@@ -114,7 +114,97 @@
           </div>
         </div>
       </section>
+
+      <!-- ============= education section =============== -->
+      <section class="resume">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="resume-container">
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to any of the 1500+
+                FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to any of the 1500+
+                FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to any of the 1500+
+                FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Experience</h3>
+            <div class="experience">
+              <h4 class="experience-title">Sr. Font End Developer</h4>
+              <h5 class="experience-subtitle">Apple Inc / 2020 - Current</h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to any of the 1500+
+                FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">Jr. Font End Developer</h4>
+              <h5 class="experience-subtitle">Dribbble Inc / 2018 - 2022</h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to any of the 1500+
+                FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">HTML Developer</h4>
+              <h5 class="experience-subtitle">Adobe Inc / 2017 - 2018</h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to any of the 1500+
+                FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <button class="btn-primary">Download CV</button>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <div class="footer-column">
+          <h1 class="section-title">Lets Connect</h1>
+          <p class="section-subtitle">
+            Please fill out the form on this section to contact with me or call between 9:00 A.M and
+            8.00 P.M ET, Monday through Friday.
+          </p>
+          <div class="social-icons">
+            <img src="/images/icons/facebook.png" alt="" />
+            <img src="/images/icons/twitter.png" alt="" />
+            <img src="/images/icons/insta.png" alt="" />
+          </div>
+        </div>
+        <div class="footer-column">
+          <h1 class="section-title">Let’s Message me</h1>
+          <form action="">
+            <input type="text" placeholder="Your Name" />
+            <input type="text" placeholder="Your Email" />
+            <textarea placeholder="Message" rows="10" cols="53"></textarea>
+            <input type="submit" value="Submit" />
+          </form>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
