--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
+    <script src="https://kit.fontawesome.com/5413de74dc.js" crossorigin="anonymous"></script>
   </head>
   <body class="open-sans-normal">
     <header class="header">
@@ -33,8 +34,10 @@
             to society behaved moments.
           </p>
           <div class="btn-container">
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-primary">Contact</button>
+            <button class="btn-primary">
+              <i class="fa-solid fa-circle-arrow-down"></i> Download CV
+            </button>
+            <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
           </div>
         </div>
         <img src="./images/hardy.png" alt="" />
@@ -178,7 +181,9 @@
             </div>
           </div>
         </div>
-        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary">
+          <i class="fa-solid fa-circle-arrow-down"></i> Download CV
+        </button>
       </section>
     </main>
     <footer>
